<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr07.lab4fcm.UI.CrearCuenta">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/crearCuenta_title_id"
            android:text="@string/login_title_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="@android:style/TextAppearance.Holo.WindowTitle"
            android:textColor="#000000"
            android:textSize="40sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/crearCuenta_title_id"
            android:text="@string/crearCuenta_txt_creacionCuenta" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/crearCuenta_txt_nombreUsuario"
            android:ems="10"
            android:maxLength="45"
            android:lines="1"
            android:fontFamily="sans-serif"
            android:layout_marginTop="112dp"
            android:id="@+id/crearCuenta_edt_nombreUsuario_id"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:lines="1"
            android:maxLength="45"
            android:fontFamily="sans-serif"
            android:layout_marginTop="9dp"
            android:hint="@string/login_correo"
            android:id="@+id/crearCuenta_edt_correo_id"
            android:layout_below="@+id/crearCuenta_edt_nombreUsuario_id"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:lines="1"
            android:maxLength="26"
            android:fontFamily="sans-serif"
            android:layout_marginTop="14dp"
            android:hint="@string/login_clave"
            android:id="@+id/crearCuenta_edt_clave_id"
            android:layout_below="@+id/crearCuenta_edt_correo_id"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:lines="1"
            android:maxLength="26"
            android:fontFamily="sans-serif"
            android:layout_marginTop="22dp"
            android:hint="@string/crearCuenta_txt_contraseñaRep"
            android:id="@+id/crearCuenta_edt_claveRep_id"
            android:layout_below="@+id/crearCuenta_edt_clave_id"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/crearCuenta_btn_crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="87dp"
            android:id="@+id/crearCuenta_btn_crear_id"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="crearCuenta" />

    </RelativeLayout>
</ScrollView>
